src/objects/Residential_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Production_kWh_kW__c</fullName>
        <label>Annual Production (kWh/kW)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Reporting_to_PTS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-Reporting to PTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Loan__r.Opportunity__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <formula>Loan__r.Opportunity__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_Production_Tracking_System_ID_Number__c</fullName>
        <label>CEC Production Tracking System ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commonwealth_Solar_Rebate_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the customer applied for funding through the Commonwealth Solar Rebate Program after 1/1/2010</description>
        <label>Commonwealth Solar Rebate Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concatenated_Inverter_Type__c</fullName>
        <formula>Inverter_Manufacturer__c &amp;&quot; &quot;&amp; Inverter_Model_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenated Inverter Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concatenated_Module_Type__c</fullName>
        <formula>Module_Manufacturer__c &amp;&quot; &quot;&amp;Module_Model_Number__c</formula>
        <label>Concatenated Module Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOER_Solar_Loan__c</fullName>
        <formula>Loan__r.DOER_Solar_Loann__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOER Solar Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_On_Site_Behind_the_Meter_Load__c</fullName>
        <label>Estimated On-Site Behind the Meter Load</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Monthly_SREC_Payment_Amount__c</fullName>
        <description>This is null if the SREC Product is not Fixed Monthly.</description>
        <formula>IF( CONTAINS(Opportunity__r.SREC_Product__r.Name,&quot;Fixed Monthly&quot;)=true,
 Generator_Nameplate_Capacity__c * Opportunity__r.SREC_Product__r.Fixed_Payment_per_kW_DC__c ,
null)</formula>
        <inlineHelpText>This is null if the SREC Product is not Fixed Monthly. Equal to the Generator nameplate capacity times the Fixed Payment per SREC on their SREC Product.</inlineHelpText>
        <label>Fixed Monthly SREC Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Payment_Start_Date__c</fullName>
        <description>This will be blank unless they are on the Monthly Fixed Payment SREC Product. The formula sets to the 13th a full CALENDAR month after the Interconnection Date on Residential Equipment, which is when their first payment from BlueWave is due.</description>
        <formula>IF( CONTAINS(Opportunity__r.SREC_Product__r.Name, &quot;Fixed Monthly&quot;), 
DATE( 
YEAR( 
IF( 
MONTH(Interconnection_Date__c)&lt;11, 
Interconnection_Date__c, 
Date(Year(Interconnection_Date__c)+1,Month(Interconnection_Date__c),Day(Interconnection_Date__c)) 
) 
), 
CASE(MONTH(Interconnection_Date__c), 
1,3,
2,4,
3,5,
4,6,
5,7,
6,8, 
7,9,
8,10,
9,11,
10,12,
11,1, 
12,2,1 
), 
13), 
null)</formula>
        <inlineHelpText>This will be blank unless they are on the Monthly Fixed Payment SREC Product. The formula sets to the 13th a full CALENDAR month after the Interconnection Date on Residential Equipment, which is when their first payment from BlueWave is due.</inlineHelpText>
        <label>Monthly Fixed SREC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Serial_Number__c</fullName>
        <description>Use specifically for the SolarLog Auto-Reporting vendor data collection</description>
        <label>GE Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Energized_Online_Date__c</fullName>
        <label>Generator Energized/Online Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generator_Installation_Date__c</fullName>
        <label>Generator Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generator_Interconnection_Date__c</fullName>
        <label>Generator Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generator_Nameplate_Capacity__c</fullName>
        <label>Generator Nameplate Capacity (kW)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generator_Type__c</fullName>
        <description>Type of Photovoltaic System installed on the customer&apos;s roof-top</description>
        <label>Generator Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Solar_Meter_Reading_Date__c</fullName>
        <label>Initial Solar Meter Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Solar_Meter_Reading__c</fullName>
        <label>Initial Solar Meter Reading</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interconnected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interconnection_Date__c</fullName>
        <label>Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Update_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interconnection Update Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_Number__c</fullName>
        <label>Inverter Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Performed__c</fullName>
        <inlineHelpText>Labor performed by NY installers, required for first disbursal</inlineHelpText>
        <label>Labor Performed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application for Building Permit</fullName>
                </value>
                <value>
                    <fullName>Project Engineering</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_SREC_Minted_Date__c</fullName>
        <description>This is populated via process builder upon SREC record creation with the most recent SREC Minted Date.</description>
        <inlineHelpText>This is populated via process builder upon SREC record creation with the most recent SREC Minted Date.</inlineHelpText>
        <label>Last SREC Minted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Residential Equipment</relationshipLabel>
        <relationshipName>Residential_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Residential Equipment</relationshipLabel>
        <relationshipName>Residential_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_Facility_Sector__c</fullName>
        <label>MA Facility Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Facility_Type__c</fullName>
        <label>MA Facility Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Supplied__c</fullName>
        <inlineHelpText>Materials supplied by NY installers, required for first disbursal</inlineHelpText>
        <label>Materials Supplied</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wiring</fullName>
                </value>
                <value>
                    <fullName>Racking</fullName>
                </value>
                <value>
                    <fullName>Modules</fullName>
                </value>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Data Acquisition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mechanical_Installation_Date__c</fullName>
        <label>Mechanical Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanically_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mechanically Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Array_Azimuth__c</fullName>
        <label>Module Array Azimuth</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Array_Mounting_Type__c</fullName>
        <label>Module Array Mounting Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Array_Tilt__c</fullName>
        <label>Module Array Tilt</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Manufacturer__c</fullName>
        <label>Module Manufacturer</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Model_Number__c</fullName>
        <label>Module Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Mounting_Location__c</fullName>
        <label>Module Mounting Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Power_Rating__c</fullName>
        <label>Module Power Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Inverters__c</fullName>
        <label>Number of Inverters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Meters__c</fullName>
        <label>Number of Meters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Modules_Text__c</fullName>
        <description>For use in docusign</description>
        <formula>Text(Number_of_Modules__c )</formula>
        <inlineHelpText>For use in docusign</inlineHelpText>
        <label>Number of Modules (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Modules__c</fullName>
        <label>Number of Modules</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Custom_ID__c</fullName>
        <formula>Opportunity__r.Custom_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Custom ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Residential Equipment</relationshipLabel>
        <relationshipName>Residential_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Labor_Performed__c</fullName>
        <inlineHelpText>If &quot;Other&quot; is selected for Labor Performed</inlineHelpText>
        <label>Other Labor Performed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Materials_Supplied__c</fullName>
        <inlineHelpText>If &quot;Other&quot; is selected for Materials Supplied</inlineHelpText>
        <label>Other Materials Supplied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTS_ID__c</fullName>
        <inlineHelpText>This field is dataloaded in with information from Sol Systems.</inlineHelpText>
        <label>PTS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_System_Shaded__c</fullName>
        <label>Percentage of System Shaded</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PowerClerk_Application_ID__c</fullName>
        <label>PowerClerk Application ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Monitorin_Systegm_Identifier__c</fullName>
        <label>Remote Monitoring System Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Monitoring_System_Vendor__c</fullName>
        <label>Remote Monitoring System Vendor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Emails__c</fullName>
        <label>SREC Emails</label>
        <summaryFilterItems>
            <field>SREC__c.Name</field>
            <operation>contains</operation>
            <value>Q4 2016</value>
        </summaryFilterItems>
        <summaryForeignKey>SREC__c.Residential_Equipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SREC_Opt_In_Calendar_Quarter__c</fullName>
        <label>SREC Opt-In Calendar Quarter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Product__c</fullName>
        <formula>Loan__r.SREC_Product__c</formula>
        <label>SREC Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Meter_Manufacturer__c</fullName>
        <label>Solar Meter Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Meter_Model__c</fullName>
        <label>Solar Meter Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Meter_Serial_Number__c</fullName>
        <label>Solar Meter Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Loan__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Capacity__c</fullName>
        <label>Storage Capacity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Full_or_Partial_Home__c</fullName>
        <description>Indicates how much of the home is powered by the storage system when the grid is down.</description>
        <inlineHelpText>Indicates how much of the home is powered by the storage system when the grid is down.</inlineHelpText>
        <label>Storage Full or Partial Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Partial home backup</fullName>
                </value>
                <value>
                    <fullName>Full home backup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Grid_Hybrid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, indicates the storage system provides power when the grid is down.</description>
        <inlineHelpText>If true, indicates the storage system provides power when the grid is down.</inlineHelpText>
        <label>Storage Grid Hybrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_Inverter_Manufacturer__c</fullName>
        <label>Storage Inverter Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Schneider Electric</fullName>
                </value>
                <value>
                    <fullName>SolarEdge</fullName>
                </value>
                <value>
                    <fullName>Pika</fullName>
                </value>
                <value>
                    <fullName>EnPhase</fullName>
                </value>
                <value>
                    <fullName>Outback Power</fullName>
                </value>
                <value>
                    <fullName>Fronius</fullName>
                </value>
                <value>
                    <fullName>Xantrex</fullName>
                </value>
                <value>
                    <fullName>LG Chem</fullName>
                </value>
                <value>
                    <fullName>SMA</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Sol-Ark</fullName>
                </value>
                <value>
                    <fullName>Context</fullName>
                    <label>Conext</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Inverter_Model__c</fullName>
        <label>Storage Inverter Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Manufacturer__c</fullName>
        <label>Storage Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Sonnen</fullName>
                </value>
                <value>
                    <fullName>LG Chem</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Simpliphi</fullName>
                </value>
                <value>
                    <fullName>Sunverge</fullName>
                </value>
                <value>
                    <fullName>Trojan</fullName>
                </value>
                <value>
                    <fullName>Fortress</fullName>
                </value>
                <value>
                    <fullName>FullRiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Model__c</fullName>
        <label>Storage Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_Differs__c</fullName>
        <formula>IF(AND(Generator_Nameplate_Capacity__c &gt; 0, ABS(Generator_Nameplate_Capacity__c -  Loan__r.Opportunity__r.System_Size__c)  &gt; 0.1), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size Differs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Size_from_Opp__c</fullName>
        <formula>Loan__r.Opportunity__r.System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size (from Opp)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Inverter__c</fullName>
        <label>Type of Inverter</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Module__c</fullName>
        <label>Type of Module</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Residential Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Loan__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Residential E Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residential Equipment</pluralLabel>
    <recordTypes>
        <fullName>BlueWave_Solar_Loan</fullName>
        <active>true</active>
        <label>BlueWave Solar Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSLP</fullName>
        <active>true</active>
        <label>MSLP</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>